<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/masuk"
        android:textSize="34sp"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_sub_title"
        android:textSize="14sp"
        android:fontFamily="@font/rubik"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title"
        app:layout_constraintStart_toStartOf="@id/tv_login_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@id/tv_login_subtitle"
        app:layout_constraintStart_toStartOf="@id/tv_login_subtitle"
        app:layout_constraintEnd_toEndOf="@id/tv_login_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:fontFamily="@font/rubik" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:layout_constraintStart_toStartOf="@id/tv_login_subtitle"
        app:layout_constraintEnd_toEndOf="@id/tv_login_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:fontFamily="@font/rubik" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_masuk"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/masuk"
        android:fontFamily="@font/rubik_medium"
        android:textAllCaps="false"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/color_FF5252"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/belum_punya_akun"
        android:textColor="@color/colorSecondaryText"
        android:fontFamily="@font/rubik"
        app:layout_constraintTop_toBottomOf="@id/btn_masuk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_daftar"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/daftar"
        android:fontFamily="@font/rubik_medium"
        android:textAllCaps="false"
        app:cornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_no_account"
        app:layout_constraintEnd_toEndOf="@id/btn_masuk"
        app:layout_constraintStart_toStartOf="@id/btn_masuk" />

</androidx.constraintlayout.widget.ConstraintLayout>